--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,8 +18,9 @@
   background-color: #a8a8a8;
 }
 
-/* For Firefox */
+
 body {
+  font-family: 'Poppins', sans-serif;
   scrollbar-width: thin;
   scrollbar-color: #c2c2c2 #f5f5f5;
   scroll-behavior: smooth;
@@ -110,9 +113,6 @@ li>button svg {
 }
 
 
-html {
-  font-family: 'Poppins', sans-serif;
-}
 
 .lg-screen-searchsuggestion-sm {
   height: calc(102vh - 70px);
@@ -237,13 +237,18 @@ input:focus {
 
 /* checkmark animation */
 
-.bg-sub-img{
+.bg-sub-img {
   background-image: url('https://www.lifepharmacy.com/images/home/subscribe-bg.jpg');
 }
 
-#phoneInputOTPAddress{
+#phoneInputOTPAddress {
   padding: 0.4rem;
-font-size: medium;
+  font-size: medium;
+}
+
+
+.swiper-pagination-bullet-active {
+  @apply !w-4 !h-2 !rounded-lg !bg-gray-400
 }
 
 /* .slides-per-view-2 {
@@ -261,3 +266,11 @@ font-size: medium;
     width: calc(100% / 3);
   }
 } */
+
+.swiper-button-prev {
+  @apply !text-gray-300
+}
+
+.swiper-button-next {
+  @apply !text-gray-300
+}
